samples/_failures_safe/1761040831_fe2262_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6455ee5d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6455ee5d.c:163:15: error: expected ‘;’ at end of input
  163 |         tokens
      |               ^
      |               ;
./samples/SAFE/__tmp_6455ee5d.c:163:9: error: expected declaration or statement at end of input
  163 |         tokens
      |         ^~~~~~
./samples/SAFE/__tmp_6455ee5d.c:163:9: error: expected declaration or statement at end of input
